# gin-gorm-project-1/controller/UserController.go
@@ -12,6 +12,8 @@ import (
 	"golang.org/x/crypto/bcrypt"
 	"gorm.io/gorm"
 	"net/http"
+	"strconv"
+	"time"
 )
 
 // Register 处理用户注册请求。
@@ -221,18 +223,6 @@ func isTelephoneExist(db *gorm.DB, telephone string) bool {
 // 此函数从 gin.Context 中获取用户相关的信息，并以 JSON 格式返回这些信息。
 // 它不接受任何参数，但使用 gin.Context 来获取请求上下文中的用户数据。
 // 返回的状态码为 http.StatusOK，表示操作成功。
-
-// 用户信息查询
-// @Summary 获取用户信息
-// @Description 获取用户信息
-// @Tags User 信息
-// @Accept json
-// @Produce json
-// @Param user body model.User  true "用户信息"
-// @Success 200 {object} response.result{} "登录成功"
-// @Failure 400 {object} response.result{} "请求错误"
-// @Failure 500 {object} response.result{} "服务器错误"
-// @Router /auth/info [post]
 func Info(ctx *gin.Context) {
 	// 从上下文中获取用户相关的信息。
 	user, _ := ctx.Get("user")
@@ -257,4 +247,182 @@ func Info(ctx *gin.Context) {
 	})
 
 	//fmt.Println(user, userIds, token, claims, password, telephone)
+}
+
+// 该函数接收一个 gin.Context 类型的参数 ctx，用于处理 HTTP 请求上下文。
+// 函数主要通过解析请求中的令牌，验证其有效性并获取对应用户的信息。
+// 用户信息查询
+// @Summary 获取用户信息
+// @Description 获取用户信息
+// @Tags token 信息
+// @Accept json
+// @Produce json
+// @Param tokenkey body model.Token  true "用户token信息"
+// @Success 200 {object} response.result{} "获取用户信息成功"
+// @Failure 400 {object} response.result{} "获取用户信息失败"
+// @Failure 500 {object} response.result{} "服务器错误"
+// @Router /auth/information [post]
+func GetUserInfo(ctx *gin.Context) {
+	// 定义一个 model.Token 类型的变量，用于存储解析出的令牌信息。
+	var tokenstring model.Token
+
+	// 尝试从请求体中解析 JSON 格式的令牌信息。
+	err := ctx.BindJSON(&tokenstring)
+	if err != nil {
+		// 如果解析失败，记录错误日志并返回错误信息。
+		common.Logger.Error("token bind param error", zap.String("token error", err.Error()))
+		ctx.JSON(
+			http.StatusBadRequest,
+			gin.H{
+				"code": http.StatusBadRequest,
+				"data": nil,
+				"msg":  "token参数错误" + err.Error(),
+			},
+		)
+		return
+	}
+
+	// 如果解析成功，但存在验证错误，处理验证错误。
+	// 参数校验
+	if err != nil {
+		_, ok := err.(validator.ValidationErrors)
+		if !ok {
+			ctx.JSON(http.StatusBadRequest, gin.H{
+				"msg":  err.Error(),
+				"code": 400,
+				"data": nil,
+			})
+			common.Logger.Error("参数校验失败", zap.String("msg", err.Error()))
+			return
+		}
+	}
+
+	// 解析令牌，获取令牌的有效性、声明等信息。
+	token, claims, err := common.ParseToken(tokenstring.Token)
+	if err != nil || !token.Valid {
+		// 如果令牌解析失败或无效，返回未授权错误。
+		ctx.JSON(http.StatusUnauthorized, gin.H{
+			"code": 401,
+			"msg":  "token无效，请检查token",
+			"data": nil,
+		})
+		ctx.Abort()
+		return
+	}
+
+	// 检查令牌是否过期。
+	if claims.ExpiresAt < time.Now().Unix() {
+		// 如果令牌过期，返回未授权错误。
+		ctx.JSON(http.StatusUnauthorized, gin.H{
+			"code": 401,
+			"msg":  "token已过期，请使用新token",
+			"data": nil,
+		})
+		ctx.Abort()
+		return
+	}
+
+	// 从令牌声明中获取用户ID。
+	userId := claims.UserId
+
+	// 获取数据库实例。
+	db := common.DB
+
+	// 根据用户ID查询用户信息。
+	var userinfo model.User
+	db.Where("id = ?", userId).First(&userinfo)
+
+	// 如果用户ID为0，表示未找到用户，返回未授权错误。
+	if userId == 0 {
+		ctx.JSON(http.StatusUnauthorized, gin.H{
+			"code": 401,
+			"msg":  "查无此用户",
+			"data": nil,
+		})
+	}
+
+	// 如果用户信息查询成功，返回用户信息。
+	ctx.JSON(http.StatusOK, gin.H{
+		"code": 200,
+		"msg":  "用户信息查询成功",
+		"data": gin.H{
+			"userId":    userId,
+			"name":      userinfo.Name,
+			"telephone": userinfo.Telephone,
+			"password":  userinfo.Password,
+			"token":     tokenstring.Token,
+			"claims":    claims,
+		},
+	})
+
+	common.Logger.Info("用户信息查询成功", zap.String("userId", strconv.Itoa(int(userId))), zap.String("name", userinfo.Name), zap.String("telephone", userinfo.Telephone), zap.String("password", userinfo.Password), zap.String("token", tokenstring.Token), zap.Any("claims", claims))
+
+	return
+}
+
+// 用户删除
+// @Summary 删除用户信息
+// @Description 删除用户信息
+// @Tags user信息删除
+// @Accept json
+// @Produce json
+// @Param user body model.User  true "用户token信息"
+// @Success 200 {object} response.result{} "获取用户信息成功"
+// @Failure 400 {object} response.result{} "获取用户信息失败"
+// @Failure 500 {object} response.result{} "服务器错误"
+// @Router /user/delete [post]
+func DeleteUser(ctx *gin.Context) {
+	db := common.DB
+
+	// 解析请求中的用户数据
+	var requestUser model.User
+	err := ctx.ShouldBind(&requestUser)
+	// 日志记录绑定过程中的任何错误
+	if err != nil {
+		common.Logger.Error("requestuser param bind json error", zap.String("error", err.Error()))
+		ctx.JSON(http.StatusBadRequest, gin.H{
+			"msg":  "参数错误" + err.Error(),
+			"code": 400,
+			"data": nil,
+		})
+		return
+	}
+
+	// 验证用户输入的数据是否符合预期格式
+	//  参数校验
+	if err != nil {
+		_, ok := err.(validator.ValidationErrors)
+		if !ok {
+			ctx.JSON(http.StatusBadRequest, gin.H{
+				"msg":  err.Error(),
+				"code": 400,
+				"data": nil,
+			})
+			common.Logger.Error("参数校验失败", zap.String("msg", err.Error()))
+			return
+		}
+	}
+
+	// 检查电话号码是否已存在
+	isExist := isTelephoneExist(common.DB, requestUser.Telephone)
+
+	if isExist {
+		db.Where("telephone = ?", requestUser.Telephone).Delete(&requestUser)
+		common.Logger.Info("删除用户成功", zap.String("telephone", requestUser.Telephone))
+		ctx.JSON(http.StatusOK, gin.H{
+			"code": 200,
+			"msg":  "删除用户成功" + requestUser.Telephone,
+			"data": nil,
+		})
+	} else {
+		common.Logger.Info("删除用户失败", zap.String("telephone", requestUser.Telephone))
+		ctx.JSON(http.StatusOK, gin.H{
+			"code": 400,
+			"msg":  "删除用户失败" + requestUser.Telephone,
+			"data": nil,
+		})
+	}
+
+	return
+
 }
