# gin-gorm-project-1/routes/routes.go
@@ -15,5 +15,11 @@ func CollectRoute(r *gin.Engine) *gin.Engine {
 	r.POST("/api/auth/login", controller.Login)
 	//获取用户信息
 	r.GET("/api/auth/info", middleware.AuthMiddleware(), controller.Info)
+
+	//解析token获取用户信息
+	r.POST("/api/auth/information", controller.GetUserInfo)
+
+	//删除用户
+	r.POST("/api/user/delete", controller.DeleteUser)
 	return r
 }
